tests/parser/define-class.4.bad.error
error: Malformed method definition
  --> test:5:7
   |
 4 |  (define-class (C :a)
   |                ------ in this class definition
 5 |   (m :a :b))
   |         ^^ unexpected trailing form
